--- a/docker-compose.html
+++ b/docker-compose.html
@@ -34,7 +34,9 @@
           </section>
           <section>
             <p>compose 其實就是組合的意思</p>
-            <p>所以 docker compose 就是一個一個 docker</p>
+            <p>
+              所以 docker compose 就是把一個一個 docker 映像檔進行組合的工具。
+            </p>
           </section>
         </section>
       </div>
