--- a/docker-compose.html
+++ b/docker-compose.html
@@ -82,7 +82,7 @@
           </section>
           <section>
             <p>
-              Docker Compose 會用一種叫 <strong>YAML</strong> 的檔案格式進行轉寫
+              Docker Compose 會 yaml 格式進行設定
             </p>
             <p>副檔名會用 <strong>.yml</strong> 結尾</p>
             <p>整個檔案就會命名為：docker-compose.yml</p>
@@ -304,7 +304,7 @@
         </section>
         <section>
           <section>
-            <p>最後就來講講如何建立起來這些服務吧！</p>
+            <h4>最後就來講講如何建立起來這些服務吧！</h4>
           </section>
           <section>
             <h4>docker-compose build</h4>
@@ -319,6 +319,10 @@
             <img src="https://imgur.com/mWxuCfU.gif" height="500" />
           </section>
           <section>
+            <h4>docker-compose start</h4>
+            <img src="https://imgur.com/MQ1fASz.gif" height="500" />
+          </section>
+          <section>
             <h4>docker-compose restart</h4>
             <img src="https://imgur.com/VTZzMEn.gif" height="500" />
           </section>
@@ -329,7 +333,7 @@
         </section>
         <section>
           <section>
-            <p>下次的分享會主題是 Kubenetes 的介紹</p>
+            <p>下次的分享會主題是 Kubernetes 的介紹</p>
           </section>
           <section>
             <p>謝謝大家</p>
