--- a/docker-compose.html
+++ b/docker-compose.html
@@ -78,7 +78,7 @@
         </section>
         <section>
           <section>
-            <h3>接下來就來講講 Docker Compose 的寫法吧！</h3>
+            <p>接下來就來講講 Docker Compose 的寫法吧！</p>
           </section>
           <section>
             <p>
