update html icom

--- a/docker-compose.html
+++ b/docker-compose.html
@@ -7,7 +7,7 @@
     <title>Docker Compose Slides</title>
     <link
       rel="shortcut icon"
-      href="https://image.flaticon.com/icons/svg/25/25231.svg"
+      href="https://www.docker.com/sites/default/files/d8/2019-07/vertical-logo-monochromatic.png"
       type="image/x-icon"
     />
     <link
