change title name

--- a/k8s-basic.html
+++ b/k8s-basic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>k8s</title>
+    <title>k8s-basic</title>
     <link
       rel="shortcut icon"
       href="https://miro.medium.com/max/7200/1*afkK1deEdJkuN3IhnzuzKg.png"
