--- a/k8s-basic.html
+++ b/k8s-basic.html
@@ -350,6 +350,7 @@
             <p>Namespace 就是抽象的 cluster</p>
             <p>讓我們能根據專案不同，將原本擁有實體資源的單一 k8s cluster</p>
             <p>劃分成幾個不同的 virtual cluster</p>
+            <p>預設所有建立的 Pod 都會擺放在 default 這個 Namespace</p>
           </section>
           <section>
             <h3>Namespace 特性</h3>
