--- a/k8s-basic.html
+++ b/k8s-basic.html
@@ -215,8 +215,8 @@
                 Pod
               </li>
               <li>
-                NodePort: 讓在不同的 cluster 中但是在同一台機器上的服務可以透過
-                NodePort 訪問到 Pod
+                NodePort: 讓在不同的 cluster 中的服務可以透過 NodePort 訪問到
+                Pod
               </li>
             </ul>
           </section>
