--- a/k8s-basic.html
+++ b/k8s-basic.html
@@ -340,7 +340,7 @@
             <img src="https://imgur.com/Rg6orY8.png" />
           </section>
           <section>
-            <p>kubectl get secrets</p>
+            <p>kubectl get secret</p>
             <img src="https://imgur.com/DDVGv4s.png" />
           </section>
         </section>
