--- a/k8s-advanced.html
+++ b/k8s-advanced.html
@@ -308,7 +308,7 @@
           <section>
             <ul>
               <li>livenessProbe(存活探針)</li>
-              <li>readnessProbe(就緒探針)</li>
+              <li>readinessProbe(就緒探針)</li>
             </ul>
           </section>
           <section>
@@ -321,7 +321,7 @@
             </p>
           </section>
           <section>
-            <h3>readnessProbe</h3>
+            <h3>readinessProbe</h3>
             <p>
               用於判斷 Pod 是否啟動完成可以接收請求，如果 readinessProbe
               失敗，則會將此 Pod 的 Endpoint 從對應的 service 的 Endpoint
