--- a/k8s-advanced.html
+++ b/k8s-advanced.html
@@ -282,7 +282,7 @@
           <section>
             <p>
               在 k8s 的 Resource Quotas 中會用 m(millicore)
-              這個單位來表示，舉例來說：400m 代表存取 40% 的資源
+              這個單位來表示，舉例來說：cpu: 400m 代表存取 0.4cpu 的資源
             </p>
           </section>
           <section>
