feat(monorepo): add rel to link

--- a/monorepo.html
+++ b/monorepo.html
@@ -127,10 +127,38 @@
           <section>
             <p>前端來說比較著名的 package manager 有以下幾個：</p>
             <ul>
-              <li><a href="https://www.npmjs.com/" target="_blank">npm</a></li>
-              <li><a href="https://yarnpkg.com/" target="_blank">Yarn</a></li>
-              <li><a href="https://pnpm.io/" target="_blank">pnpm</a></li>
-              <li><a href="https://rushjs.io/" target="_blank">rush</a></li>
+              <li>
+                <a
+                  href="https://www.npmjs.com/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >npm</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://yarnpkg.com/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Yarn</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://pnpm.io/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >pnpm</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://rushjs.io/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >rush</a
+                >
+              </li>
             </ul>
           </section>
           <section>
